ocserv-0.10.9 sample config

--- a/ocserv.conf
+++ b/ocserv.conf
@@ -39,7 +39,7 @@
 #auth = "pam"
 #auth = "pam[gid-min=1000]"
 #auth = "plain[passwd=./sample.passwd,otp=./sample.otp]"
-auth = "plain[passwd=./sample.passwd]"
+auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 #auth = "certificate"
 #auth = "radius[config=/etc/radiusclient/radiusclient.conf,groupconfig=true]"
 
@@ -108,8 +108,8 @@ socket-file = /var/run/ocserv-socket
 #
 # There may be multiple server-cert and server-key directives,
 # but each key should correspond to the preceding certificate.
-server-cert = ../tests/server-cert.pem
-server-key = ../tests/server-key.pem
+server-cert = /etc/ocserv/ssl.crt
+server-key = /etc/ocserv/ssl.key
 
 # Diffie-Hellman parameters. Only needed if you require support
 # for the DHE ciphersuites (by default this server supports ECDHE).
@@ -145,18 +145,18 @@ ca-cert = ../tests/ca.pem
 # system calls allowed to a worker process, in order to reduce damage from a
 # bug in the worker process. It is available on Linux systems at a performance cost.
 # The performance cost is roughly 2% overhead at transfer time (tested on a Linux 3.17.8).
-isolate-workers = true
+isolate-workers = false
 
 # A banner to be displayed on clients
 #banner = "Welcome"
 
 # Limit the number of clients. Unset or set to zero for unlimited.
 #max-clients = 1024
-max-clients = 16
+max-clients = 0
 
 # Limit the number of identical clients (i.e., users connecting 
 # multiple times). Unset or set to zero for unlimited.
-max-same-clients = 2
+max-same-clients = 0
 
 # When the server has a dynamic DNS address (that may change),
 # should set that to true to ask the client to resolve again on
@@ -171,7 +171,7 @@ max-same-clients = 2
 
 # Limit the number of client connections to one every X milliseconds 
 # (X is the provided value). Set to zero for no limit.
-#rate-limit-ms = 100
+rate-limit-ms = 0
 
 # Stats report time. The number of seconds after which each
 # worker process will report its usage statistics (number of
@@ -197,7 +197,7 @@ dpd = 90
 mobile-dpd = 1800
 
 # MTU discovery (DPD must be enabled)
-try-mtu-discovery = false
+try-mtu-discovery = true
 
 # If you have a certificate from a CA that provides an OCSP
 # service you may provide a fresh OCSP status response within
@@ -263,11 +263,11 @@ auth-timeout = 40
 
 # The time (in seconds) that a client is allowed to stay idle (no traffic)
 # before being disconnected. Unset to disable.
-#idle-timeout = 1200
+idle-timeout = 86400
 
 # The time (in seconds) that a mobile client is allowed to stay idle (no
 # traffic) before being disconnected. Unset to disable.
-#mobile-idle-timeout = 2400
+mobile-idle-timeout = 86400
 
 # The time (in seconds) that a client is not allowed to reconnect after 
 # a failed authentication attempt.
@@ -301,7 +301,7 @@ ban-reset-time = 300
 # cookie will also be active for this time amount prior to be
 # invalid. That should allow a reasonable amount of time for roaming
 # between different networks.
-cookie-timeout = 300
+cookie-timeout = 86400
 
 # If this is enabled (not recommended) the cookies will stay
 # valid even after a user manually disconnects, and until they
@@ -361,7 +361,7 @@ pid-file = /var/run/ocserv.pid
 # priority. Alternatively this can be used to set the IP Type-
 # Of-Service, by setting it to a hexadecimal number (e.g., 0x20).
 # This can be set per user/group or globally.
-#net-priority = 3
+net-priority = 6
 
 # Set the VPN worker process into a specific cgroup. This is Linux
 # specific and can be set per user/group or globally.
@@ -379,7 +379,7 @@ device = vpns
 predictable-ips = true
 
 # The default domain to be advertised
-default-domain = example.com
+default-domain = cnlic.me
 
 # The pool of addresses that leases will be given from. If the leases
 # are given via Radius, or via the explicit-ip? per-user config option then 
@@ -401,7 +401,9 @@ ipv4-netmask = 255.255.255.0
 # The advertized DNS server. Use multiple lines for
 # multiple servers.
 # dns = fc00::4be0
-dns = 192.168.1.2
+#dns = 192.168.1.2
+dns = 8.8.8.8
+dns = 8.8.4.4
 
 # The NBNS server (if any)
 #nbns = 192.168.1.3
@@ -438,14 +440,213 @@ ping-leases = false
 # comment out all routes from the server, or use the special keyword
 # 'default'.
 
-route = 10.10.10.0/255.255.255.0
-route = 192.168.0.0/255.255.0.0
+#route = 10.10.10.0/255.255.255.0
+#route = 192.168.0.0/255.255.0.0
 #route = fef4:db8:1000:1001::/64
 
 # Subsets of the routes above that will not be routed by
 # the server.
 
-no-route = 192.168.5.0/255.255.255.0
+#no-route = 192.168.5.0/255.255.255.0
+no-route = 1.0.0.0/255.192.0.0
+no-route = 1.64.0.0/255.224.0.0
+no-route = 1.112.0.0/255.240.0.0
+no-route = 1.176.0.0/255.240.0.0
+no-route = 1.192.0.0/255.240.0.0
+no-route = 14.0.0.0/255.224.0.0
+no-route = 14.96.0.0/255.224.0.0
+no-route = 14.128.0.0/255.224.0.0
+no-route = 14.192.0.0/255.224.0.0
+no-route = 27.0.0.0/255.192.0.0
+no-route = 27.96.0.0/255.224.0.0
+no-route = 27.128.0.0/255.224.0.0
+no-route = 27.176.0.0/255.240.0.0
+no-route = 27.192.0.0/255.224.0.0
+no-route = 27.224.0.0/255.240.0.0
+no-route = 36.0.0.0/255.192.0.0
+no-route = 36.96.0.0/255.224.0.0
+no-route = 36.128.0.0/255.192.0.0
+no-route = 36.192.0.0/255.224.0.0
+no-route = 36.240.0.0/255.240.0.0
+no-route = 39.0.0.0/255.240.0.0
+no-route = 39.64.0.0/255.224.0.0
+no-route = 39.96.0.0/255.240.0.0
+no-route = 39.128.0.0/255.192.0.0
+no-route = 42.0.0.0/255.240.0.0
+no-route = 42.48.0.0/255.240.0.0
+no-route = 42.80.0.0/255.240.0.0
+no-route = 42.96.0.0/255.224.0.0
+no-route = 42.128.0.0/255.128.0.0
+no-route = 43.224.0.0/255.224.0.0
+no-route = 45.64.0.0/255.240.0.0
+no-route = 45.112.0.0/255.240.0.0
+no-route = 47.80.0.0/255.240.0.0
+no-route = 47.96.0.0/255.224.0.0
+no-route = 49.0.0.0/255.240.0.0
+no-route = 49.48.0.0/255.240.0.0
+no-route = 49.64.0.0/255.224.0.0
+no-route = 49.112.0.0/255.240.0.0
+no-route = 49.128.0.0/255.224.0.0
+no-route = 49.208.0.0/255.240.0.0
+no-route = 49.224.0.0/255.224.0.0
+no-route = 54.208.0.0/255.240.0.0
+no-route = 58.0.0.0/255.128.0.0
+no-route = 58.128.0.0/255.224.0.0
+no-route = 58.192.0.0/255.224.0.0
+no-route = 58.240.0.0/255.240.0.0
+no-route = 59.32.0.0/255.224.0.0
+no-route = 59.64.0.0/255.224.0.0
+no-route = 59.96.0.0/255.240.0.0
+no-route = 59.144.0.0/255.240.0.0
+no-route = 59.160.0.0/255.224.0.0
+no-route = 59.192.0.0/255.192.0.0
+no-route = 60.0.0.0/255.224.0.0
+no-route = 60.48.0.0/255.240.0.0
+no-route = 60.160.0.0/255.224.0.0
+no-route = 60.192.0.0/255.192.0.0
+no-route = 61.0.0.0/255.192.0.0
+no-route = 61.80.0.0/255.240.0.0
+no-route = 61.128.0.0/255.192.0.0
+no-route = 61.224.0.0/255.224.0.0
+no-route = 101.0.0.0/255.128.0.0
+no-route = 101.128.0.0/255.224.0.0
+no-route = 101.192.0.0/255.240.0.0
+no-route = 101.224.0.0/255.224.0.0
+no-route = 103.0.0.0/255.192.0.0
+no-route = 103.192.0.0/255.240.0.0
+no-route = 103.224.0.0/255.224.0.0
+no-route = 106.0.0.0/255.128.0.0
+no-route = 106.224.0.0/255.240.0.0
+no-route = 110.0.0.0/255.128.0.0
+no-route = 110.144.0.0/255.240.0.0
+no-route = 110.160.0.0/255.224.0.0
+no-route = 110.192.0.0/255.192.0.0
+no-route = 111.0.0.0/255.192.0.0
+no-route = 111.64.0.0/255.224.0.0
+no-route = 111.112.0.0/255.240.0.0
+no-route = 111.128.0.0/255.192.0.0
+no-route = 111.192.0.0/255.224.0.0
+no-route = 111.224.0.0/255.240.0.0
+no-route = 112.0.0.0/255.128.0.0
+no-route = 112.128.0.0/255.240.0.0
+no-route = 112.192.0.0/255.240.0.0
+no-route = 112.224.0.0/255.224.0.0
+no-route = 113.0.0.0/255.128.0.0
+no-route = 113.128.0.0/255.240.0.0
+no-route = 113.192.0.0/255.192.0.0
+no-route = 114.16.0.0/255.240.0.0
+no-route = 114.48.0.0/255.240.0.0
+no-route = 114.64.0.0/255.192.0.0
+no-route = 114.128.0.0/255.240.0.0
+no-route = 114.192.0.0/255.192.0.0
+no-route = 115.0.0.0/255.0.0.0
+no-route = 116.0.0.0/255.0.0.0
+no-route = 117.0.0.0/255.128.0.0
+no-route = 117.128.0.0/255.192.0.0
+no-route = 118.0.0.0/255.224.0.0
+no-route = 118.64.0.0/255.192.0.0
+no-route = 118.128.0.0/255.128.0.0
+no-route = 119.0.0.0/255.128.0.0
+no-route = 119.128.0.0/255.192.0.0
+no-route = 119.224.0.0/255.224.0.0
+no-route = 120.0.0.0/255.192.0.0
+no-route = 120.64.0.0/255.224.0.0
+no-route = 120.128.0.0/255.224.0.0
+no-route = 120.192.0.0/255.192.0.0
+no-route = 121.0.0.0/255.128.0.0
+no-route = 121.192.0.0/255.192.0.0
+no-route = 122.0.0.0/254.0.0.0
+no-route = 124.0.0.0/255.0.0.0
+no-route = 125.0.0.0/255.128.0.0
+no-route = 125.160.0.0/255.224.0.0
+no-route = 125.192.0.0/255.192.0.0
+no-route = 139.0.0.0/255.224.0.0
+no-route = 139.128.0.0/255.128.0.0
+no-route = 140.64.0.0/255.224.0.0
+no-route = 140.128.0.0/255.224.0.0
+no-route = 140.192.0.0/255.192.0.0
+no-route = 144.0.0.0/255.192.0.0
+no-route = 144.96.0.0/255.224.0.0
+no-route = 144.224.0.0/255.224.0.0
+no-route = 150.0.0.0/255.224.0.0
+no-route = 150.96.0.0/255.224.0.0
+no-route = 150.128.0.0/255.224.0.0
+no-route = 150.192.0.0/255.192.0.0
+no-route = 152.96.0.0/255.224.0.0
+no-route = 153.0.0.0/255.192.0.0
+no-route = 153.96.0.0/255.224.0.0
+no-route = 157.0.0.0/255.192.0.0
+no-route = 157.96.0.0/255.224.0.0
+no-route = 157.128.0.0/255.224.0.0
+no-route = 157.224.0.0/255.224.0.0
+no-route = 159.224.0.0/255.224.0.0
+no-route = 161.192.0.0/255.224.0.0
+no-route = 162.96.0.0/255.224.0.0
+no-route = 163.0.0.0/255.192.0.0
+no-route = 163.96.0.0/255.224.0.0
+no-route = 163.128.0.0/255.192.0.0
+no-route = 163.192.0.0/255.224.0.0
+no-route = 166.96.0.0/255.224.0.0
+no-route = 167.128.0.0/255.192.0.0
+no-route = 167.192.0.0/255.224.0.0
+no-route = 168.160.0.0/255.224.0.0
+no-route = 171.0.0.0/255.128.0.0
+no-route = 171.192.0.0/255.224.0.0
+no-route = 175.0.0.0/255.128.0.0
+no-route = 175.128.0.0/255.192.0.0
+no-route = 180.64.0.0/255.192.0.0
+no-route = 180.128.0.0/255.128.0.0
+no-route = 182.0.0.0/255.0.0.0
+no-route = 183.0.0.0/255.192.0.0
+no-route = 183.64.0.0/255.224.0.0
+no-route = 183.128.0.0/255.128.0.0
+no-route = 192.96.0.0/255.224.0.0
+no-route = 192.160.0.0/255.248.0.0
+no-route = 192.169.0.0/255.255.0.0
+no-route = 192.170.0.0/255.254.0.0
+no-route = 192.172.0.0/255.252.0.0
+no-route = 192.176.0.0/255.240.0.0
+no-route = 202.0.0.0/255.128.0.0
+no-route = 202.128.0.0/255.192.0.0
+no-route = 202.192.0.0/255.224.0.0
+no-route = 203.0.0.0/255.255.192.0
+no-route = 203.0.64.0/255.255.224.0
+no-route = 203.0.96.0/255.255.240.0
+no-route = 203.0.112.0/255.255.255.0
+no-route = 203.0.114.0/255.255.254.0
+no-route = 203.0.116.0/255.255.252.0
+no-route = 203.0.120.0/255.255.248.0
+no-route = 203.0.128.0/255.255.128.0
+no-route = 203.1.0.0/255.255.0.0
+no-route = 203.2.0.0/255.254.0.0
+no-route = 203.4.0.0/255.252.0.0
+no-route = 203.8.0.0/255.248.0.0
+no-route = 203.16.0.0/255.240.0.0
+no-route = 203.32.0.0/255.224.0.0
+no-route = 203.64.0.0/255.192.0.0
+no-route = 203.128.0.0/255.192.0.0
+no-route = 203.192.0.0/255.224.0.0
+no-route = 210.0.0.0/255.192.0.0
+no-route = 210.64.0.0/255.224.0.0
+no-route = 210.160.0.0/255.224.0.0
+no-route = 210.192.0.0/255.224.0.0
+no-route = 211.64.0.0/255.192.0.0
+no-route = 211.128.0.0/255.192.0.0
+no-route = 218.0.0.0/255.128.0.0
+no-route = 218.160.0.0/255.224.0.0
+no-route = 218.192.0.0/255.192.0.0
+no-route = 219.64.0.0/255.224.0.0
+no-route = 219.128.0.0/255.224.0.0
+no-route = 219.192.0.0/255.192.0.0
+no-route = 220.96.0.0/255.224.0.0
+no-route = 220.128.0.0/255.128.0.0
+no-route = 221.0.0.0/255.224.0.0
+no-route = 221.96.0.0/255.224.0.0
+no-route = 221.128.0.0/255.128.0.0
+no-route = 222.0.0.0/255.0.0.0
+no-route = 223.0.0.0/255.224.0.0
+no-route = 223.64.0.0/255.192.0.0
+no-route = 223.128.0.0/255.128.0.0
 
 # Groups that a client is allowed to select from.
 # A client may belong in multiple groups, and in certain use-cases
