add new cn ip ranges

--- a/ocserv.conf
+++ b/ocserv.conf
@@ -108,8 +108,8 @@ socket-file = /var/run/ocserv-socket
 #
 # There may be multiple server-cert and server-key directives,
 # but each key should correspond to the preceding certificate.
-server-cert = /etc/ocserv/ssl.crt
-server-key = /etc/ocserv/ssl.key
+server-cert = /etc/ocserv/vpn.cnlic.com.crt
+server-key = /etc/ocserv/vpn.cnlic.com.key
 
 # Diffie-Hellman parameters. Only needed if you require support
 # for the DHE ciphersuites (by default this server supports ECDHE).
@@ -379,7 +379,7 @@ device = vpns
 predictable-ips = true
 
 # The default domain to be advertised
-default-domain = cnlic.me
+default-domain = vpn.cnlic.com
 
 # The pool of addresses that leases will be given from. If the leases
 # are given via Radius, or via the explicit-ip? per-user config option then 
